# opauque-stellar

./: CHANGES_SUMMARY.md  COMMIT_SCRIPT.sh  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  package-lock.json  package.json  pr.md
.github/workflows/: ci.yml  scanner-testnet.yml
contracts/attestation-engine-v2/src/: lib.rs
contracts/opaque-schema-core/src/: lib.rs
contracts/reputation-verifier/src/: lib.rs
contracts/schema-registry/src/: lib.rs
contracts/stealth-announcer/src/: lib.rs
contracts/stealth-registry/: Cargo.toml
contracts/stealth-registry/src/: lib.rs
deployments/security/: npm-audit-policy.jsonc
docs/: CHECKPOINT_PERSISTENCE.md  RPC_RATE_LIMIT_POLICY.md  TELEMETRY_PRIVACY_REVIEW.md  WASM_SIMD_EVALUATION.md
docs/integrators/: read-only-sdk.md
docs/rfcs/: 0001-optional-token-fees-for-attestation-verification.md  0002-event-schema-v2-migration.md
docs/runbooks/: footprint-budgets.md
examples/: README.md  simulate-attest.ts
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: wasm.d.ts
frontend/src/components/: AdminPanel.tsx
frontend/src/hooks/: useScanner.ts
frontend/src/lib/: contracts.ts  opaqueCache.ts  programs.ts  reputationProver.ts  stealth.ts
frontend/src/lib/__tests__/: announcementDedup.test.ts
frontend/src/services/: keyRotationManager.ts  recoveryManager.ts
scanner/: Cargo.toml  README.md
scanner/benches/: scanner_perf.rs
scanner/src/: attestation.rs  lib.rs  merkle.rs  scanner.rs
scripts/: check-npm-audit.sh  ci-local.sh  verify-sdk-readonly-version.ts
(+3 files in other folders)
